// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndexBrowser Component browser a class index 1`] = `
<div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-u-sm12"
    >
      <InstancesList
        onSelectRef={[Function]}
        query={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`IndexBrowser Component browser non class index 1`] = `
<div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-u-sm12"
    >
      <h3>
        Lookup
      </h3>
      <ReplEditor
        mode="editor form-field text-field"
        name="index-lookup-editor"
        onChange={[Function]}
        shortcuts={
          Array [
            Object {
              "bindKey": Object {
                "mac": "Enter",
                "win": "Enter",
              },
              "exec": [Function],
              "name": "search",
            },
          ]
        }
        value="\\"\\""
      />
      <p
        className="ms-TextField-description"
      >
        The contents of this field will be evaluated with the context of a repl and placed in the "terms" field of the index look up query.
      </p>
      <ComponentWithInjectedProps
        onClick={[Function]}
      >
        Search
      </ComponentWithInjectedProps>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-u-sm12"
    >
      <InstancesList
        onSelectRef={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`IndexBrowser Component browser non class index 2`] = `
<div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-u-sm12"
    >
      <h3>
        Lookup
      </h3>
      <ReplEditor
        mode="editor form-field text-field"
        name="index-lookup-editor"
        onChange={[Function]}
        shortcuts={
          Array [
            Object {
              "bindKey": Object {
                "mac": "Enter",
                "win": "Enter",
              },
              "exec": [Function],
              "name": "search",
            },
          ]
        }
        value="a name"
      />
      <p
        className="ms-TextField-description"
      >
        The contents of this field will be evaluated with the context of a repl and placed in the "terms" field of the index look up query.
      </p>
      <ComponentWithInjectedProps
        onClick={[Function]}
      >
        Search
      </ComponentWithInjectedProps>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-u-sm12"
    >
      <InstancesList
        onSelectRef={[Function]}
        query={[Function]}
      />
    </div>
  </div>
</div>
`;
